--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
         temp:
           use_jdbc_metadata_defaults: false
   datasource:
-    url: jdbc:postgresql://localhost:5432/teste
+    url: jdbc:postgresql://localhost:5432/locacao
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
