--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   jpa:
     database-platform: org.hibernate.spatial.dialect.postgis.PostgisDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: false
 
     properties:
@@ -16,23 +16,16 @@ spring:
         temp:
           use_jdbc_metadata_defaults: false
   datasource:
-    url: jdbc:postgresql://servidor.vm:5432/locacao
+    url: jdbc:postgresql://localhost:5432/locacao
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
-  
-  #mail:
-  #host: email.ma.gov.br
-  #port: 587
-  #username: naoresponda@seati.ma.gov.br
-  #password: n@0r3sp0nd@ 
     
   jackson:
     serialization:
-      FAIL_ON_EMPTY_BEANS: false
-
-  server:
-      port: 8080
-      servlet:
-          path: /*
+      FAIL_ON_EMPTY_BEANS: false
+server:
+  port: 8080
+  servlet:
+      context-path: /locacao
 
